task(update): update

--- a/week2/class2.ipynb
+++ b/week2/class2.ipynb
@@ -464,12 +464,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "592dd2fe",
+   "cell_type": "markdown",
+   "id": "3ae58b6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Assignment and Markdown guide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0853bf74",
+   "metadata": {},
+   "source": [
+    "Q: Create a variable that holds a string value.\n",
+    "\n",
+    "- point 1\n",
+    "- point 2\n",
+    "- point 3\n",
+    "\n",
+    "1. number1\n",
+    "2. number2\n",
+    "3. number3\n",
+    "\n",
+    "To save file press --> `CTRL+S`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0be00c3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Muhammad Ai Jinnah\n"
+     ]
+    }
+   ],
+   "source": [
+    "str_variable = \"Muhammad Ai Jinnah\"\n",
+    "print(str_variable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff235c17",
+   "metadata": {},
+   "source": [
+    "Q:  this is "
+   ]
   }
  ],
  "metadata": {
