--- a/week4/class4.ipynb
+++ b/week4/class4.ipynb
@@ -1341,8 +1341,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "3cf6a1fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = input(\"Enter a list: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "bf6ea8e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[1,2,3,4,5,6,7,8]'"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "4d859a7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "]\n",
+      ",\n",
+      ",\n",
+      ",\n",
+      ",\n",
+      ",\n",
+      ",\n",
+      ",\n",
+      "[\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in lst[::-2]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cf9b0cc",
    "metadata": {},
    "outputs": [],
    "source": []
